--- a/styles/style.css
+++ b/styles/style.css
@@ -50,3 +50,147 @@
     border-left: solid #ddd 2px;
     font-size: 11px;
 }
+
+.menu > ul {
+    margin: 0;
+    width: 100%;
+    list-style: none;
+}
+
+.menu > ul:before,
+.menu > ul:after {
+    content: "";
+    display: table;
+}
+
+.menu > ul:after {
+    clear: both;
+}
+
+.menu > ul > li {
+    float: left;
+    padding: 0;
+    margin: 0;
+}
+
+.menu > ul > li a {
+    padding: 15px 15px;
+    display: block;
+    color: #333;
+    font-size: 15px;
+}
+
+.menu > ul > li:hover > a,
+.menu > ul > li:focus > a,
+.menu > ul > li.active > a {
+    color: #1e72bc;
+}
+
+.menu > ul > li > ul {
+    display: none;
+    width: 100%;
+    background-color: #fff;
+    position: absolute;
+    z-index: 99;
+    left: 0;
+    margin: 0;
+    list-style: none;
+    box-sizing: border-box;
+    box-shadow: 0 15px 40px -20px #000;
+    padding: 0;
+    background-image: url('../images/landing_page/bg2.png');
+    background-size: cover;
+    background-position: right bottom;
+    min-height: 420px;
+    border-top: solid #1e72bc 5px;
+}
+
+.menu > ul > li > ul:before,
+.menu > ul > li > ul:after {
+    content: "";
+    display: table;
+}
+
+.menu > ul > li > ul:after {
+    clear: both;
+}
+
+.menu > ul > li > ul > li {
+    margin: 0;
+    list-style: none;
+    width: 25%;
+    background: none;
+    float: left;
+    padding: 15px 20px 0 20px;
+    min-height: auto;
+}
+
+.menu > ul > li > ul > li:nth-child(4) {
+    border-right: none;
+}
+
+.menu > ul > li > ul > li a {
+    color: #222;
+    padding: 0;
+    width: 100%;
+    display: block;
+}
+
+.menu > ul > li > ul > li a:hover {
+    color: #1e72bc;
+}
+
+.menu > ul > li > ul > li >ul {
+    display: block;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+.menu > ul > li > ul > li > ul:before,
+.menu > ul > li > ul > li > ul:after {
+    content: "";
+    display: table;
+}
+
+.menu > ul > li > ul > li > ul:after {
+    clear: both;
+}
+
+.menu > ul > li > ul > li > ul > li {
+    float: left;
+    width: 100%;
+    padding: 10px;
+}
+
+.menu > ul > li > ul > li > ul >li a {
+    border: 0;
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.menu > ul > li > ul.normal-sub {
+    width: 300px;
+    left: auto;
+    padding: 15px 10px;
+    min-height: auto;
+    background-image: none;
+}
+
+.menu > ul > li > ul.normal-sub > li {
+    width: 100%;
+    padding: 10px 15px;
+    min-height: auto;
+}
+
+.menu > ul > li > ul.normal-sub >li a {
+    border: 0;
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.right_bt {
+    float: right;
+    margin-top: 23px;
+}
